[gd_scene load_steps=7 format=2]

[ext_resource path="res://MiscRelated/GUI_Category_Related/AdvancedButton/AdvancedButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://TowerRelated/Color_Orange/704/704_InfoPanel/704_EmblemButton/704_ButtonFrame.png" type="Texture" id=2]
[ext_resource path="res://TowerRelated/Color_Orange/704/704_InfoPanel/704_EmblemButton/704_ButtonFrame_Hovered.png" type="Texture" id=3]
[ext_resource path="res://TowerRelated/Color_Orange/704/704_InfoPanel/704_EmblemButton/EmblemButton.gd" type="Script" id=4]
[ext_resource path="res://TowerRelated/Color_Orange/704/704_InfoPanel/704_EmblemButton/704_ButtonBackground_Lvl0.png" type="Texture" id=5]
[ext_resource path="res://TowerRelated/Color_Orange/704/704_InfoPanel/704_EmblemButton/704_FireIcon.png" type="Texture" id=6]

[node name="EmblemButton" instance=ExtResource( 1 )]
margin_right = 27.0
margin_bottom = 27.0
rect_rotation = 45.0
rect_pivot_offset = Vector2( 13.5, 13.5 )
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 3 )
script = ExtResource( 4 )

[node name="LevelBackground" type="TextureRect" parent="." index="0"]
margin_left = 0.5
margin_top = 0.5
margin_right = 25.5
margin_bottom = 25.5
mouse_filter = 2
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="." index="1"]
margin_left = 0.5
margin_top = -0.5
margin_right = 27.5
margin_bottom = 26.5
rect_rotation = -45.0
rect_pivot_offset = Vector2( 13.5, 13.5 )
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EmblemIcon" type="TextureRect" parent="MarginContainer" index="0"]
margin_left = 7.0
margin_top = 6.0
margin_right = 19.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 6, 7 )
mouse_filter = 2
size_flags_horizontal = 6
size_flags_vertical = 6
texture = ExtResource( 6 )
[connection signal="pressed_mouse_event" from="." to="." method="_on_EmblemButton_pressed_mouse_event"]
